<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/courseListFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/courses" />

    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/ic_location"
        android:title="@string/map"/>

    <item
        android:id="@+id/rulesFragment"
        android:icon="@drawable/ic_rules"
        android:title="@string/rules" />

</menu>