...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hva_vil_du_vite_mer_om"
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pil" />

        <Spinner
            android:id="@+id/spinner"
...
